--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -25,6 +25,10 @@
       margin-bottom: 80px;
     }
   }
+
+  &__main {
+    margin-bottom: 160px;
+  }
 }
 
 /*<<<------------------ Header Section -------------------->>> */
@@ -107,14 +111,14 @@
 
   @include base.media-custom(1200px) {
     width: 573px;
-    height: 614px;
+    height: min-content;
     flex-direction: column;
+    gap: 40px;
     align-items: flex-end;
   }
 
   @include base.media-custom(600px) {
     width: 327px;
-    height: 1134px;
     text-align: center;
     gap: 55px;
   }
@@ -135,12 +139,14 @@
 
     @include base.media-custom(1200px) {
       width: 515px;
+      height: 125px;
       flex-direction: row;
       gap: 55px;
     }
 
     @include base.media-custom(600px) {
       width: 327px;
+      height: 245px;
       align-items: center;
       flex-direction: column;
       gap: 32px;
@@ -169,6 +175,11 @@
     justify-content: center;
     border-radius: 45px;
     background-color: base.$color2;
+
+    @include base.media-custom(1200px) {
+      width: 120px;
+      height: 124px;
+    }
   }
 }
 
@@ -181,8 +192,16 @@
   gap: 72px;
   align-items: center;
 
+  @include base.media-tablet {
+    width: 573px;
+  }
+
+  @include base.media-phone {
+    width: 327px;
+  }
+
   &__text {
-    width: 540px;
+    width: 60%;
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -193,10 +212,15 @@
 
   &__card-container {
     width: 920px;
-    height: 482px;
     display: flex;
     flex-direction: row;
     gap: 30px;
+
+    @include base.media-custom(950px) {
+      flex-direction: column;
+      align-items: center;
+      gap: 65px;
+    }
   }
 }
 
@@ -210,10 +234,17 @@
   padding: 38px;
   position: relative;
   border-radius: 8px;
+  align-self: center;
 
   &--alternate {
+    height: 449px;
     background-color: base.$color1;
     color: base.$color5;
+  }
+
+  @include base.media-phone {
+    width: 327px;
+    height: 436px;
   }
 
   &__logo {
@@ -249,6 +280,28 @@
 
     .card--alternate & {
       list-style-image: url(../icon-check.svg);
+    }
+  }
+}
+
+/*<<<------------------ Footer Section -------------------->>> */
+
+.footer {
+  width: 100%;
+  height: 228px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  gap: 42px;
+  background-image: url(../bg-footer-squiggle.svg);
+
+  &__form {
+    display: flex;
+    gap: 16px;
+
+    @include base.media-custom(600px) {
+      flex-direction: column;
     }
   }
 }
