--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -99,6 +99,7 @@ p {
   color: #ffffff;
   background-color: #080c20;
   padding: 80px 0px 130px;
+  font-family: "Manrope", sans-serif;
 }
 @media (max-width: 800px) {
   .page {
