--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -6,6 +6,7 @@
   color: base.$color4;
   background-color: base.$color5;
   padding: 80px 0px 130px;
+  font-family: "Manrope", sans-serif;
 
   @include base.media-tablet {
     padding: 55px 0px 115px;
