--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -48,7 +48,8 @@ p {
     width: 100%;
   }
 }
-.btn:hover, .btn:active {
+.btn:hover,
+.btn:active {
   cursor: pointer;
   background-color: #080c20;
   color: #ffffff;
@@ -65,7 +66,8 @@ p {
   border: none;
   outline: none;
 }
-.input:active, .input:focus {
+.input:active,
+.input:focus {
   border: 2px solid #3ee9e5;
 }
 .input:focus:invalid {
@@ -155,7 +157,8 @@ p {
   display: flex;
   justify-content: center;
   align-items: center;
-  background: url(../illustration-hero-left.svg) no-repeat, url(../bg-hero-squiggle.svg) no-repeat, url(../illustration-hero-right.svg) no-repeat;
+  background: url(../illustration-hero-left.svg) no-repeat, url(../bg-hero-squiggle.svg) no-repeat,
+    url(../illustration-hero-right.svg) no-repeat;
   background-position: -50px 0px, 50% 50%, 108% 0%;
 }
 @media (max-width: 800px) {
@@ -340,7 +343,7 @@ p {
 @media (max-width: 400px) {
   .card {
     width: 327px;
-    height: 436px;
+    height: auto;
   }
 }
 .card__logo {
